add VIRGO2 VOG key

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ data/VOG_gene_product.csv filter=lfs diff=lfs merge=lfs -text
 data/hover_dict.pkl filter=lfs diff=lfs merge=lfs -text
 data/reorder_dataframe.pkl filter=lfs diff=lfs merge=lfs -text
 mgCST-classifier-master/vog.mgss_classifier.RDS filter=lfs diff=lfs merge=lfs -text
+VIRGO2/VIRGO2_VOGkey.txt filter=lfs diff=lfs merge=lfs -text
